# kvelmo

./: .coderabbit.yaml  .gitignore  .golangci.yml  .goreleaser.yml  AGENTS.md  ASC-COMPATIBILITY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  Makefile  README.md  SECURITY.md  TRADEMARK.md  coderabbit.yml  docker-compose.yaml  flow_v2.md  go.mod  go.sum  install.ps1  install.sh  lefthook.yml  package.json  tygo.yaml  wrangler.toml
.github/: FUNDING.yml  alias.sh  dependabot.yml  flow_v2.md  index.js  index.min.js  pull_request_template.md
contrib/: README.md
desktop/: forge.config.ts  package.json
docs/: COMPARISON.md  README.md  _coverpage.md  _sidebar.md  faq.md  glossary.md  index.html  quickstart.md
e2e/: cli_full_cycle_test.go  conductor_test.go  socket_test.go
examples/: README.md
prototype/: .editorconfig  .gitignore  .golangci.yml  .goreleaser.yml  AGENTS.md  ASC-COMPATIBILITY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  REFERENCE.md  SECURITY.md  TRADEMARK.md  go.mod  go.sum  install.sh  lefthook.yml  package.json  wrangler.toml
sandbox/: Dockerfile.mehr  README.md
scripts/: desktop-dev.sh
web/: bunfig.toml  eslint.a11y.config.js  eslint.config.js  index.html  package-lock.json  package.json  (+3 more)
web-ui-tests/: Makefile  eslint.config.mjs  package.json  playwright.config.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/resources/: .gitkeep
web/src-tauri/src/: lib.rs  main.rs  server_manager.rs  window_state.rs  wsl.rs
(+3044 files in other folders)
