[package]
name = "kvelmo-desktop"
version = "0.1.0"
description = "kvelmo Desktop Application"
authors = ["valksor"]
license = "MIT"
repository = "https://github.com/valksor/kvelmo"
edition = "2021"

[lib]
name = "kvelmo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "rt"] }
regex = "1"
dirs = "6"
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
# Windows-specific for WSL integration

[profile.release]
lto = true
opt-level = "s"
strip = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tempfile = "3"

[profile.dev]
incremental = true
